# internal/model/convert/post.go
@@ -25,9 +25,10 @@ func Post2DTOByUser(post *core.Post, author *core.User) dto.Post {
 
 func Post2DTOByCommunity(post *core.Post, community *core.Community) dto.Post {
 	return dto.Post{
-		ID:      post.ID,
-		Author:  CommunityProfile2Author(Community2DTOSmallProfile(community)),
-		Message: post.Message,
-		Images:  post.Images,
+		ID:            post.ID,
+		Author:        CommunityProfile2Author(Community2DTOSmallProfile(community)),
+		Message:       post.Message,
+		Images:        post.Images,
+		CountComments: int64(len(post.CommentsIDs)),
 	}
 }
