# internal/model/dto/post.go
@@ -8,10 +8,11 @@ type Author struct {
 }
 
 type Post struct {
-	ID      string   `json:"id"`
-	Author  Author   `json:"author"`
-	Message string   `json:"message"`
-	Images  []string `json:"images,omitempty"`
+	ID            string   `json:"id"`
+	Author        Author   `json:"author"`
+	Message       string   `json:"message"`
+	Images        []string `json:"images,omitempty"`
+	CountComments int64    `json:"count_comments"`
 }
 
 type CreatePostRequest struct {
